# H_Programming_Language

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  Makefile  README.md  TODO.txt  build-linux.sh  build-windows.sh  build_all.sh  hbyte_main.cpp  hcompiler.cpp  main.c  recompile.sh  sample.hm  syscall.hm  syscall.ho  virtemu.cpp
.cache/clangd/index/: Array.cpp.950CBDB5C895173B.idx  Array.hpp.656C8C4A52815CD8.idx  Compiler.cpp.D0EE16D328BA84FB.idx  Compiler.hpp.E35F999645A54B74.idx  DataType.cpp.3922CD22323F9125.idx  DataType.hpp.00DF11951E4EFF9C.idx  File.cpp.65366F44E3EF1A76.idx  File.hpp.7715B2B984A4BDEE.idx  Function.cpp.C7F233DCCA9AFF7A.idx  Function.hpp.02C393EE238E384D.idx  HByte.cpp.2309AD45726F528C.idx  HByte.h.3898F504B8B56D7A.idx  IfCondition.cpp.B73254FF1ED9A496.idx  IfCondition.hpp.B3C4E1C7EBB519E8.idx  Label.cpp.57B230B2B9C674D1.idx  Label.hpp.EB8F40FB79ADF2FA.idx  Parser.cpp.57A1B229FA1C7C17.idx  Parser.hpp.23277A4AED9E430F.idx  Register.cpp.2835C0AB70818093.idx  Register.hpp.DDA9E96E9A441EC0.idx  String.cpp.9E13D22A771BD140.idx  String.h.5A80CFA10D0C348B.idx  Token.cpp.5857349FD308FE3E.idx  Token.cpp.B055FC9C94FA0FD5.idx  Token.hpp.381CAEB6B17B5B40.idx  Token.hpp.3B92B8F272AC1393.idx  Tokenizer.cpp.2CE53F9038AA1587.idx  Tokenizer.cpp.6D0C75F4ED5972AF.idx  Tokenizer.hpp.4F958FB57B6090E1.idx  Tokenizer.hpp.FE7FC6D81E508E62.idx  Tools.cpp.878F63C0F26B7EA1.idx  Tools.hpp.2CB3317BEC653B28.idx  Variable.cpp.DD320C103B03545B.idx  Variable.hpp.667C70558734998A.idx  add.c.8728DA7F5D9608D0.idx  add.h.1C536FDF0FD3EA94.idx  and.c.3B3CD8F87B78E5D1.idx  and.h.6941325F6B05E452.idx  array.h.E5115E88B15AD406.idx  asrt.h.B4C1C17C02750F09.idx  (+80 more)
ChangesLogs/: CHANGESLOG-01-17-26.md  CHANGESLOG-27-12-2025.md  CHANGESLOG-3-12-25.md
emulator/bios/: bios.hm
examples/: Main.hi  io.hm  malloc.hi  math.hi  sample.hi  sample.hi.hm
libh/: malloc.hm  stdio.hm  string.hm
src/: asrt.h  cpu.c  cpu.h  file_reader.c  file_reader.h  ins_make.c  ins_make.h  ins_tools.c  inst.h  interrupt.c  interrupt.h  memory.c  memory.h  syscall.c  term.c  term.h
src/compiler/: Array.cpp  Array.hpp  Class.cpp  Class.hpp  Compiler.cpp  Compiler.hpp  Config.h  ControlStructure.cpp  ControlStructure.hpp  DataType.cpp  DataType.hpp  File.cpp  File.hpp  Function.cpp  Function.hpp  IfCondition.cpp  IfCondition.hpp  Node.cpp  Node.h  Parser.cpp  Parser.hpp  Register.cpp  Register.hpp  Stack.cpp  Stack.hpp  String.cpp  String.h  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  Tools.cpp  Tools.hpp  Variable.cpp  Variable.hpp  compiler.c  compiler.h  tools.c
src/compiler/objects/: object.cpp  object.h
src/cpp/: file_reader.cpp  ins.compiler.cpp  ins_compiler.list.hpp  ins_make.cpp  ins_make.hpp  ins_tools copy.bckp  ins_tools.cpp  instruction.cpp  label.cpp  label.hpp  tools.cpp
src/data/: ascii.cpp  ascii.h  datatype.cpp  datatype.h
src/debug/: hdebug.c  hdebug.cpp  hdebug.h  ins_make.hpp  ins_tools.cpp  instruction_decode.cpp  instruction_decode.h  tools.cpp
src/hbyte/: HByte.cpp  HByte.h  Label.cpp  Label.hpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  filereader.cpp  filereader.h
src/hbyte/inst/: instruction.h
src/ins/: add.c  add.h  and.c  and.h  call.c  call.h  cmp.c  cmp.h  cnd.c  cnd.h  div.c  div.h  go.c  go.h  in.c  in.h  inst.h  int.c  int.h  lod.c  lod.h  mov.c  mov.h  mul.c  mul.h  nand.c  nand.h  nor.c  nor.h  not.c  not.h  or.c  or.h  pct.c  pct.h  pnt.c  pnt.h  pop.c  pop.h  push.c  (+13 more)
src/libc/: array.h  file.c  file.h
src/tools/: memory.c  memory.cpp  memory.h  tools.h
src/virt/: emulator.cpp  emulator.h
src/virt/bios/: BIOS.cpp  BIOS.h  interrupt.cpp  interrupt.h  text.cpp  text.h
src/virt/driver/: Disk.cpp  Disk.h
test/asm/: main.hm  main.ho
test/bios/: bios.hm  bios.ho
test/boot/: boot.hm  boot.ho
toolchain/: toolchain-mingw.cmake
